# webpage

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  base.html  contact.html  editorial-board.html  editorial-board.json  main.py  on-leave-AE.json  package.json  pyproject.toml  requirements.txt
.circleci/: config.yml
css/: style.css
data/: editorial-board.json
legacy/: migrate.ipynb  migrate.py
src/: assign_issue_number.py  backup.py  gen_json.py  gen_volume.py  gen_webpage.py  send_emails.py  upload.py  utils.py
src/tests/: test.py
templates/: author-info.html  base.html  contact.html  editorial-board-reviewers.html  editorial-board.html  faq.html  history.html  index.html  jmlr.xml  news.html  paper.html  reviewer-guide.html  stats.html
templates/beta/: aes.html  author-info.html  base.html  contact.html  editorial-board-reviewers.html  editorial-board.html  faq.html  history.html  index.html  jmlr.xml  news.html  reviewer-guide.html  reviewers.html  stats.html
templates/beta/format/: authors-guide.html  format.html  formatting-errors.html
templates/beta/mloss/: index.html
templates/beta/papers/: biblio.bib  (+3 more)
templates/format/: authors-guide.html  format.html  formatting-errors.html
templates/mloss/: index.html  mloss-info.html
templates/news/: retrospectives_20years.html  schoelkopf-retirement.html
templates/old/: index.html  paper.html  volume.html
templates/papers/: index.html  item.html  volume.html
templates/special_issues/: climate_change.html  contact.html  index.html  list.html  nomination.html
tests/: test.py
(+12 files in other folders)
