[project]
name = "jmlr-webpage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awscli>=1.44.49",
    "bibtexparser>=1.4.4",
    "bs4>=0.0.2",
    "google-api-python-client>=2.190.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "jinja2==3.1.5",
    "pexpect>=4.9.0",
    "pypdf2>=3.0.1",
    "pytest>=9.0.2",
    "pytest-sugar>=1.1.1",
]
